// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag Primary Bold displays correctly 1`] = `
<body>
  <div>
    <span
      class="usa-tag font-sans-2xs padding-y-2px width-full width-auto line-height-sans-2 text-no-wrap bg-primary-lighter text-primary-dark text-bold"
    >
      Primary Test
    </span>
  </div>
</body>
`;

exports[`Tag Primary textWrap displays correctly 1`] = `
<body>
  <div>
    <span
      class="usa-tag font-sans-2xs padding-y-2px width-full width-auto line-height-sans-2 text-wrap display-block bg-primary-lighter text-primary-dark"
    >
      Primary Test with a really really really really long child
    </span>
  </div>
</body>
`;

exports[`Tag Variants Primary displays correctly 1`] = `
<body>
  <div>
    <span
      class="usa-tag font-sans-2xs padding-y-2px width-full width-auto line-height-sans-2 text-no-wrap bg-primary-lighter text-primary-dark"
    >
      Primary Test
    </span>
  </div>
</body>
`;

exports[`Tag Variants accent displays correctly 1`] = `
<body>
  <div>
    <span
      class="usa-tag font-sans-2xs padding-y-2px width-full width-auto line-height-sans-2 text-no-wrap bg-accent-warm-lighter text-accent-warm-darker"
    >
      Accent Test
    </span>
  </div>
</body>
`;

exports[`Tag Variants base displays correctly 1`] = `
<body>
  <div>
    <span
      class="usa-tag font-sans-2xs padding-y-2px width-full width-auto line-height-sans-2 text-no-wrap bg-base-lighter text-base-dark"
    >
      Base Test
    </span>
  </div>
</body>
`;

exports[`Tag Variants baseDark displays correctly 1`] = `
<body>
  <div>
    <span
      class="usa-tag font-sans-2xs padding-y-2px width-full width-auto line-height-sans-2 text-no-wrap bg-white text-base-dark border usa-tag-padding-override"
    >
      BaseDark Test
    </span>
  </div>
</body>
`;

exports[`Tag Variants error displays correctly 1`] = `
<body>
  <div>
    <span
      class="usa-tag font-sans-2xs padding-y-2px width-full width-auto line-height-sans-2 text-no-wrap bg-error-lighter text-error-dark"
    >
      Error Test
    </span>
  </div>
</body>
`;

exports[`Tag Variants info displays correctly 1`] = `
<body>
  <div>
    <span
      class="usa-tag font-sans-2xs padding-y-2px width-full width-auto line-height-sans-2 text-no-wrap bg-info-lighter text-info-darker"
    >
      Info Test
    </span>
  </div>
</body>
`;

exports[`Tag Variants info with hover displays correctly 1`] = `
<body>
  <div>
    <span
      class="usa-tag font-sans-2xs padding-y-2px width-full width-auto line-height-sans-2 text-no-wrap bg-info-lighter text-info-darker accent-cool-hover-override"
    >
      Info with hover Test
    </span>
  </div>
</body>
`;

exports[`Tag Variants noBg displays correctly 1`] = `
<body>
  <div>
    <span
      class="usa-tag font-sans-2xs padding-y-2px width-full width-auto line-height-sans-2 text-no-wrap bg-white text-base"
    >
      NoBg Test
    </span>
  </div>
</body>
`;
